@@ -798,6 +798,8 @@ Extension Modules
 Tests
 -----
 
+- Issue #17249: convert a test in test_capi to use unittest and reap threads.
+
 - We now run both test_email.py and test_email_renamed.py when running the
   test_email regression test.  test_email_renamed contains some tests that
   test_email does not.
